98-bookinfo-layered/01-bookinfo-fe-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ossm-bookinfo-fe
  labels:
    servicemesh: ossm-demo
    layer: frontend
    app: bookinfo
