98-bookinfo-layered/02-bookinfo-mgw-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ossm-bookinfo-middle
  labels:
    servicemesh: ossm-demo
    layer: mgw
    app: bookinfo
