98-bookinfo-layered/03-bookinfo-be-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ossm-bookinfo-be
  labels:
    servicemesh: ossm-demo
    layer: backend
    app: bookinfo
